# mcu-code-archive

bxcan-test/: Cargo.toml  Embed.toml
bxcan-test/.cargo/: config.toml
bxcan-test/src/: main.rs
embassy-stm32-led-blink/: Cargo.toml
embassy-stm32-led-blink/.cargo/: config.toml
embassy-stm32-led-blink/.helix/: languages.toml
embassy-stm32-led-blink/src/: main.rs
esp-now-ping/client/: Cargo.toml
esp-now-ping/server/: Cargo.toml
pulse-counter/src/: main.rs
pwm-manual-duty/: CMakeLists.txt  main.cpp
verilog/: and_test  and_test.v  and_test.vcd  hello_world  hello_world.v  or_test  or_test.v  or_test.vcd
