[package]
name = "bxcan-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = { version = "0.7.0", features = ["unstable-defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.1", features = ["defmt", "print-defmt"] }
nb = "1.1.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f446", "defmt", "can",]

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
